@@ -1,7 +1,9 @@
+2010-02-13  6.5.9-5 Cristy  <quetzlzacatenango@image...>
+  * The jpeg:extent define sometimes exceeded the specified limit.
+
 2010-02-09  6.5.9-4 Cristy  <quetzlzacatenango@image...>
   * Resolve "too many open files"  (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=15546).
-  * The jpeg:extent define sometimes exceeded the specified limit.
 
 2010-02-08  6.5.9-3 Anthony Thyssen <A.Thyssen@griffith...>
   * Added Correlate method which does a Convolve without reflecting the kernel.
